Move descriptive flag for prod env

--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -112,7 +112,7 @@
                     "default": "Key Pair Name"
                 },
                 "CreatePrivateSubnets": {
-                    "default": "Boolean on whether to create private subnets"
+                    "default": "Create production ready enviroment"
                 },
                 "PublicSubnet1CIDR": {
                     "default": "Public Subnet 1 CIDR"
