--- a/ci/config.yml
+++ b/ci/config.yml
@@ -19,42 +19,52 @@ global:
     - us-west-2
   reporting: true
 tests:
-  defaults:
-    parameter_input: aws-vpc-defaults.json
+  2az-asia:
+    parameter_input: solace-aws-ha-2az-prod.json
     template_file: solace-vmr-master.template
-  complete:
-    parameter_input: aws-vpc-complete.json
+    regions:
+      - ap-northeast-1
+      - ap-northeast-2
+      - ap-south-1
+      - ap-southeast-1
+  3az-asia:
+    parameter_input: solace-aws-ha-3az-prod.json
     template_file: solace-vmr-master.template
-  public:
-    parameter_input: aws-vpc-public.json
+    regions:
+      - ap-southeast-2
+  2az-americas:
+    parameter_input: solace-aws-ha-2az-prod.json
     template_file: solace-vmr-master.template
-  3az-eu-west-1:
-    parameter_input: aws-vpc-3az.json
+    regions:
+      - us-west-1
+      - ca-central-1
+      - sa-east-1
+  3az-americas:
+    parameter_input: solace-aws-ha-3az-prod.json
+    template_file: solace-vmr-master.template
+    regions:
+      - us-east-1
+      - us-east-2
+      - us-west-2
+      - ap-southeast-2
+  2az-europe:
+    parameter_input: solace-aws-ha-2az-prod.json
+    template_file: solace-vmr-master.template
+    regions:
+      - eu-west-2
+  3az-europe:
+    parameter_input: solace-aws-ha-3az-prod.json
+    template_file: solace-vmr-master.template
     regions:
       - eu-west-1
+      - eu-central-1
+  2az-poc:
+    parameter_input: solace-aws-ha-2az-proc.json
     template_file: solace-vmr-master.template
-  3az-complete-us-east-2:
-    parameter_input: aws-vpc-3az-complete.json
     regions:
-      - us-east-2
+      - us-west-1
+  3az-poc:
+    parameter_input: solace-aws-ha-3az-proc.json
     template_file: solace-vmr-master.template
-  3az-public-us-west-2:
-    parameter_input: aws-vpc-3az-public.json
-    regions:
-      - us-west-2
-    template_file: solace-vmr-master.template
-  4az-us-east-1:
-    parameter_input: aws-vpc-4az.json
     regions:
       - us-east-1
-    template_file: solace-vmr-master.template
-  4az-complete-us-east-1:
-    parameter_input: aws-vpc-4az-complete.json
-    regions:
-      - us-east-1
-    template_file: solace-vmr-master.template
-  4az-public-us-east-1:
-    parameter_input: aws-vpc-4az-public.json
-    regions:
-      - us-east-1
-    template_file: solace-vmr-master.template
