--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -136,10 +136,10 @@
                     "default": "Public Subnet 3 CIDR"
                 },
                 "PrivateSubnet3ACIDR": {
-                    "default": "Public Subnet 1 CIDR"
+                    "default": "Private Subnet 3A CIDR"
                 },
                 "PrivateSubnet3BCIDR": {
-                    "default": "Public Subnet 1 CIDR"
+                    "default": "Private Subnet 3B CIDR"
                 },
                 "RemoteAccessCIDR": {
                     "default": "Allowed External Access CIDR"
@@ -243,14 +243,14 @@
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
             "Default": "10.0.128.64/26",
-            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Description": "CIDR Block for the bootstrap subnet 1A located in Availability Zone 1",
             "Type": "String"
         },
         "PrivateSubnet1BCIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
             "Default": "10.0.128.128/25",
-            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Description": "CIDR Block for the bootstrap subnet 1B located in Availability Zone 1",
             "Type": "String"
         },
         "PublicSubnet2CIDR": {
@@ -264,14 +264,14 @@
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
             "Default": "10.0.129.64/26",
-            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Description": "CIDR Block for the bootstrap subnet 2A located in Availability Zone 2",
             "Type": "String"
         },
         "PrivateSubnet2BCIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
             "Default": "10.0.129.128/25",
-            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Description": "CIDR Block for the bootstrap subnet 2B located in Availability Zone 2",
             "Type": "String"
         },
         "PublicSubnet3CIDR": {
@@ -285,14 +285,14 @@
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
             "Default": "10.0.130.64/26",
-            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Description": "CIDR Block for the bootstrap subnet 3A located in Availability Zone 3",
             "Type": "String"
         },
         "PrivateSubnet3BCIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
             "Default": "10.0.130.128/25",
-            "Description": "CIDR Block for the bootstrap subnet 1 located in Availability Zone 1",
+            "Description": "CIDR Block for the bootstrap subnet 3B located in Availability Zone 3",
             "Type": "String"
         },
         "RemoteAccessCIDR": {
