--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -31,8 +31,7 @@
                         "PublicSubnet3CIDR",
                         "PrivateSubnet3ACIDR",
                         "PrivateSubnet3BCIDR",
-                        "RemoteAccessCIDR",
-                        "SSHAccessCIDR"
+                        "RemoteAccessCIDR"
                     ]
                 },
                 {
@@ -143,9 +142,6 @@
                 },
                 "RemoteAccessCIDR": {
                     "default": "Allowed External Access CIDR"
-                },
-                "SSHAccessCIDR": {
-                    "default": "Allowed SSH Access CIDR"
                 },
                 "VPCCIDR": {
                     "default": "VPC CIDR"
@@ -299,12 +295,6 @@
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
             "Description": "Allowed CIDR block for external access to cluster nodes",
-            "Type": "String"
-        },
-        "SSHAccessCIDR": {
-            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
-            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
-            "Description": "Allowed CIDR block for SSH access to cluster nodes",
             "Type": "String"
         },
         "VPCCIDR": {
@@ -528,7 +518,7 @@
         },
         "SolaceStack": {
             "DependsOn": [
-                "VPCStack"
+                "BastionStack"
             ],
             "Type": "AWS::CloudFormation::Stack",
             "DeletionPolicy": "Retain",
@@ -593,9 +583,12 @@
                     "UsePrivateSubnets": {
                         "Ref": "CreatePrivateSubnets"  
                     },
-                   "SSHAccessCIDR": {
-                        "Ref": "SSHAccessCIDR"
-                    },
+                    "SSHSecurityGroupID": {
+                        "Fn::GetAtt": [
+                            "BastionStack",
+                            "Outputs.BastionSecurityGroupID"
+                        ]
+                    },                                        
                     "VPCCIDR": {
                         "Fn::GetAtt": [
                             "VPCStack",
