--- a/templates/solace-vmr-master.template
+++ b/templates/solace-vmr-master.template
@@ -31,6 +31,7 @@
                         "PublicSubnet3CIDR",
                         "PrivateSubnet3ACIDR",
                         "PrivateSubnet3BCIDR",
+                        "SSHAccessCIDR",
                         "RemoteAccessCIDR"
                     ]
                 },
@@ -142,6 +143,9 @@
                 },
                 "RemoteAccessCIDR": {
                     "default": "Allowed External Access CIDR"
+                },
+                "SSHAccessCIDR": {
+                    "default": "Allowed External Mgmt Access CIDR"
                 },
                 "VPCCIDR": {
                     "default": "VPC CIDR"
@@ -295,6 +299,12 @@
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
             "Description": "Allowed CIDR block for external access to cluster nodes",
+            "Type": "String"
+        },
+        "SSHAccessCIDR": {
+            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
+            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
+            "Description": "Allowed CIDR block for external access to cluster nodes for mgmt",
             "Type": "String"
         },
         "VPCCIDR": {
