--- a/templates/solace-vmr.template
+++ b/templates/solace-vmr.template
@@ -116,7 +116,7 @@
                     "default": "Security group allowed to access console ssh"
                 },
                 "UsePrivateSubnets": {
-                    "default": "Relay on mgmt security group of Bastion"
+                    "default": "Use private subnets"
                 },
                 "VPCID": {
                     "default": "VPC CIDR"
@@ -217,6 +217,7 @@
         },
         "VPCCIDR": {
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/([0-9]|[1-2][0-9]|3[0-2]))$",
+            "Default": "172.31.0.0/16",
             "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/x",
             "Description": "Allowed CIDR block for internal access to cluster nodes",
             "Type": "String"
@@ -601,10 +602,8 @@
                     },
                     "SubnetID": {
                         "Fn::Select": [
-                            2,
-                            {
-                                "Ref": "SubnetID"
-                            }
+                            { "Fn::If": ["Use3AZs", 2, 1] },
+                            { "Ref": "SubnetID" }
                         ]
                     }
                 }
@@ -657,6 +656,14 @@
                         "SourceSecurityGroupId": {
                             "Ref": "SSHSecurityGroupID"
                         }
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "22",
+                        "ToPort": "22",
+                        "CidrIp": {
+                            "Ref": "RemoteAccessCIDR"
+                        }
                     }
                 ]
             }
@@ -683,6 +690,14 @@
                         "ToPort": "22",
                         "SourceSecurityGroupId": {
                             "Ref": "SSHSecurityGroupID"
+                        }
+                    },
+                    {
+                        "IpProtocol": "tcp",
+                        "FromPort": "22",
+                        "ToPort": "22",
+                        "CidrIp": {
+                            "Ref": "RemoteAccessCIDR"
                         }
                     }
                 ]
